Fix and unify spacing across all sections

--- a/components/contact.css
+++ b/components/contact.css
@@ -1,9 +1,7 @@
 #contact {
-  margin-top:var(--s700);
   text-align: center;
 }
 #contact .booking-window {
-  padding: 0 var(--s400) 0 var(--s400); 
   position: relative;
   background-image: url(../assets/vector_cta.svg);
   background-position: center;
@@ -15,7 +13,7 @@
     background-size: cover;
   }
   .calendly-inline-widget {
-    height: 1200px !important;
+    height: 1050px !important;
   }
 }
 @media screen and (max-width: 42.5rem) {
