--- a/components/projects.css
+++ b/components/projects.css
@@ -1,6 +1,3 @@
-#projects-showcase {
-  padding: var(--content-padding);
-}
 #projects-showcase .projects-heading {
   margin-bottom: var(--s600);
   flex-wrap: wrap;
@@ -9,16 +6,13 @@
   display: inline-block;
 }
 #projects-showcase .projects-heading a span {
-  /* transform: translateX(0); */
   padding:0;
   transition: padding 150ms;
 }
 #projects-showcase .projects-heading a:hover span {
-  /* transform: translateX(1.2); */
   padding: 0 16px 0 0;
 }
 #projects-grid {
-  /* background-color: aquamarine; */
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap:var(--s500);
@@ -67,20 +61,14 @@
   transform: translateX(-40%) scale(1.0);
   opacity: 0;
   transition: transform 150ms, opacity 150ms;
-  /* color: #f8bf6a8d; */
 }
 .project:hover::after {
   transform: translateX(0) scale(1.2);
   opacity: 1;  
 }
-/* 
-Mockup display code, TODO
-*/
 .iphone.iphone {
-  /* background-color: rgba(255, 0, 0, 0.216); */
   bottom: -10%;
   right:-7%;
-  /* transform: rotate(10deg); */
   transition: transform 250ms;
 }
 .iphone.iphone:hover {
@@ -97,14 +85,13 @@ Mockup display code, TODO
 }
 /* END mockup display code */
 
-@media screen and (max-width: 45rem) {
-  #projects-showcase {
-    padding: var(--s700) var(--s500);
-  }
+@media screen and (max-width: 50rem) {
   .projects-heading {
     flex-direction: column;
     gap:var(--s200);
   }
+}
+@media screen and (max-width: 43rem) {
   #projects-grid {
     grid-template-columns: 1fr;
   }
