--- a/components/testimonials.css
+++ b/components/testimonials.css
@@ -1,9 +1,6 @@
-#testimonials {
-  padding: var(--s500);
-}
 #testimonials h2 {
   text-align: center;
-  margin-bottom: var(--s700);
+  margin-bottom: var(--s600);
 }
 .testimonial {
   border-radius: var(--border-radius);
@@ -17,7 +14,6 @@
 .testimonial::before {
   content:url(../assets/quote-right.svg);
 }
-
 .swiper-wrapper {
   margin-bottom: 64px;
 }
