--- a/style.css
+++ b/style.css
@@ -11,10 +11,9 @@
   box-sizing: border-box;
   margin:0;
   padding:0;
-  font-size:20px;
+  font-size:16px;
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
-  font-style: normal;
   scroll-behavior: smooth;
 }
  :root {
@@ -27,15 +26,14 @@
   --clr-white: #ffffff;
   --clr-black: #1e1e1e;
   --clr-paragraph: #D3D3D3;
-  /* --clr-primary-gradient: linear-gradient(100deg, #1F2433 0%, #1A2545 100%); */
   --clr-primary-gradient: #1D243C;
-  /* --clr-footer-gradient: linear-gradient(100deg, #161A1E 0%, #0E121D 45%, #1A202E 95%); */
   --clr-footer-gradient: #0a0e16;
 
   /* Sizing - Breakpoints */
   --mobile: 30rem; /* 480px */
   --tablet: 50rem; /* 800px */
   --desktop: 62.5rem; /* 1000px */
+  --bigscreen: 90rem; /* 1440px */
 
   /* Sizing - text */
   --h1: 3rem;
@@ -47,7 +45,10 @@
   /* Sizing - Misc */
   --border-radius: 0.625rem;
   --max-content-width: 75rem;
-  --content-padding: var(--s700);
+
+  --content-padding-y : var(--s900);
+  --content-padding-x: var(--s700);
+  --content-padding: 0 var(--content-padding-x) var(--content-padding-y) var(--content-padding-x) ;
 
   /* Sizing - Design system */
   --px1: 0.0625rem;
@@ -61,26 +62,31 @@
   --s800: 4rem;     /* 64px */
   --s900: 6rem;     /* 96px */
 }
-@media screen and (max-width: 90rem) {
+@media screen and (min-width: 90rem) { /* Big screen */
   * {
-    font-size: 16px;
+    font-size: 20px;
   }
 }
-@media screen and (max-width: 30rem) {
+@media screen and (max-width: 50rem) {
+  :root {
+    --content-padding-y : var(--s800);
+    --content-padding-x: var(--s600);
+  }
+}
+@media screen and (max-width: 30rem) { /* Mobile */
   :root {
     --h1: 1.8rem;
-    --h2: 1.6rem;
+    --h2: 1.9rem;
     --h3: 1.3rem;
     
-    --content-padding: var(-s400);
-
+    --content-padding-y : var(--s700);
+    --content-padding-x: var(--s400);
   }
 }
 
 /*
  * Global styling 
  */
-
 body {
   background-color: var(--clr-bg);
   color:var(--clr-paragraph);
@@ -130,8 +136,7 @@ button, .button-primary {
   transition: all 150ms;
   display: inline-block;
   text-align: center;
-
-  /* Important to prevent override from CSS mistake*/
+  /* Important to prevent override from other CSS*/
 } 
 button:hover, 
 button:active,
@@ -141,15 +146,11 @@ button:active,
   color:var(--clr-primary) !important;
 }
 .max-content-width {
+  padding: var(--content-padding);
   max-width: var(--max-content-width);
   margin: 0 auto;
   position: relative;
 }
-
-/* 
-* Helper classes - flexbox
-*/
-
 .row {
   display: flex;
   flex-direction: row;
@@ -164,27 +165,13 @@ button:active,
 .align-center {
   align-content: center;
 }
-
-/* 
-* Helper classes - other
-*/
 .full-width {
   width: 100%;
 }
 
-
-
-
-
-
-
-
-
-/* Fog for hero section */
+/* Header */
 
 #nav {
-  padding: var(--content-padding);
-  padding-bottom: var(--s800);
   z-index: 1;
   flex-wrap: wrap;
   position: absolute;
@@ -192,8 +179,8 @@ button:active,
   left:0;
   width: 100%;
 }
-#nav .max-content-width {
-  padding: 0 var(--s700);
+#nav > .max-content-width {
+  padding-top: var(--s600);
 }
 a.nav-logo {
   height: 100%;
@@ -245,12 +232,6 @@ label.btn-menu-hero img {
 }
 
 @media screen and (max-width: 60rem) {
-  #nav {
-    padding: var(--s600) var(--s400)
-  }
-  #nav .max-content-width {
-    padding: 0;
-  }
   #nav li:not(.menu) {  
   display: none;
   }
